<resources>
    <string name="app_name">Maos</string>
    <string name="logo">Logo</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="i_accept_the_license_and_agreement">I Accept the License and Agreement</string>
    <string name="find_your_account_using_email_adress">Find Your Account Using Email Address</string>
    <string name="reset_password">Reset Password</string>
    <string name="start">Start</string>
    <string name="my_profile">My Profile</string>
    <string name="history">History</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="log_out">Log Out</string>
    <string name="maos">MAOS</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="latest_patient_scan_result">Latest Patient Scan Result</string>
    <string name="birth">Age</string>
    <string name="status">Status</string>
    <string name="null_date">01/01/1970</string>
    <string name="please_fill_your_new_password">Please Fill Your New Password</string>
    <string name="new_password">New Password</string>
    <string name="update_password">Update Password</string>
    <string name="update_profile">Update Profile</string>
</resources>
