<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:title="@string/my_profile"
            android:icon="@drawable/profile"/>
        <item
            android:id="@+id/nav_history"
            android:title="@string/history"
            android:icon="@drawable/history"/>
        <item
            android:id="@+id/nav_help"
            android:title="@string/help"
            android:icon="@drawable/help"/>
        <item
            android:id="@+id/nav_about"
            android:title="@string/about"
            android:icon="@drawable/info"/>
        <item
            android:id="@+id/nav_out"
            android:title="@string/log_out"
            android:icon="@drawable/logout"/>
    </group>

</menu>
