<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".Activity.LoginActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/img_logo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/applogo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/logo"/>
            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/img_logo"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                android:background="@drawable/edit_box"
                android:hint="@string/email_address"
                android:padding="10dp"
                android:textColor="@color/colorBlack"
                android:inputType="textEmailAddress" />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_email"
                android:layout_marginTop="20dp"
                app:passwordToggleEnabled="true">
                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp"
                    android:background="@drawable/edit_box"
                    android:hint="@string/password"
                    android:padding="10dp"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:id="@+id/tv_forgot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_below="@id/til_password"
                android:text="@string/forgot_password"
                android:textColor="@color/colorWhite"
                android:textAlignment="textEnd"
                android:textSize="16sp"
                android:textStyle="bold"/>
            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_forgot"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="40dp"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="60dp"
                android:background="@drawable/button"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textSize="17sp"/>
        </RelativeLayout>
    </ScrollView>
    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible"/>
</RelativeLayout>